# dune-geometry

./: .gitlab-ci.yml  CMakeLists.txt  dune.module
dune/: CMakeLists.txt
dune/geometry/: CMakeLists.txt  affinegeometry.hh  axisalignedcubegeometry.hh  chainedgeometry.hh  config.hh.in  deprecated_topology.hh  dimension.hh  generalvertexorder.hh  localfiniteelementgeometry.hh  mappedgeometry.hh  multilineargeometry.hh  parametrizedgeometry.hh  quadraturerules.hh  referenceelement.hh  referenceelementgeometry.hh  referenceelementimplementation.cc  referenceelementimplementation.hh  referenceelements.hh  refinement.hh  topologyfactory.hh  type.hh  typeindex.hh  virtualrefinement.hh
dune/geometry/genericgeometry/: CMakeLists.txt
dune/geometry/quadraturerules/: CMakeLists.txt  compositequadraturerule.hh  gauss.cc  gausslobatto.cc  gausslobattoquadrature.hh  gaussquadrature.hh  gaussradauleftquadrature.hh  gaussradaurightquadrature.hh  jacobi1quadrature.hh  jacobi2quadrature.hh  jacobi_1_0.cc  jacobi_2_0.cc  jacobi_n_0.hh  numberconversion.hh  quadraturerules.cc  simplexquadrature.hh  tensorproductquadrature.hh  tetrahedronquadrature.hh  trianglequadrature.hh  writequad.mac
dune/geometry/test/: CMakeLists.txt  benchmark-geometries.cc  checkgeometry.hh  localfiniteelements.hh  referenceelementgeometry.hh  test-chainedgeometry.cc  test-geometrytype-id.cc  test-mappedgeometry.cc  test-multilineargeometry.cc  test-parametrizedgeometry.cc  test-quadrature.cc
dune/geometry/utility/: CMakeLists.txt  convergenceoptions.hh  defaultgeometrytraits.hh  fmatrixhelper.hh  identitymatrix.hh  typefromvertexcount.hh
dune/python/: CMakeLists.txt
dune/python/geometry/: multilineargeometry.hh  quadraturerules.hh  referenceelements.hh  type.hh
lib/: CMakeLists.txt  Makefile.am
python/: CMakeLists.txt  setup.py.in
python/dune/geometry/: CMakeLists.txt  _defaultreferenceelements.cc  _geometry.cc  _refelem0.cc  _refelem1.cc  _refelem2.cc  _refelem3.cc  _referenceelements.py
